--- a/Codefiles/LM40222_LSOA_Week_1.Rmd
+++ b/Codefiles/LM40222_LSOA_Week_1.Rmd
@@ -13,7 +13,7 @@ https://www.nomisweb.co.uk/
 
 To ease you into the process I have download a run of datasets from the Census of 2021. The spatial grain size of the data is at the Lower layer Super Output Areas (LSOAs) level. Lower layer Super Output Areas (LSOAs) are made up of groups of Output Areas (OAs), usually four or five. They comprise between 400 and 1,200 households and have a usually resident population between 1,000 and 3,000 persons. They were first created following the 2001 and they may be modified slightly after each census. Figure 1 (below) shows the Middle Super Output Areas. These are displayed for visual clarity, each one of these (and there are 132 of them) has 4-5 LSOAs embedded within it. **Birmingham has 639 LSOAs with an average population size of 1,680 residents per LSOA**.
 
-![Figure 1: LSOAs in Birmingham](/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Images/Birmingham_MSOAs.png)
+![Figure 1: LSOAs in Birmingham](//Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Images/Birmingham_MSOAs.png)
 The next few workshops in this module will these data as a case study. As the module progresses we will use datasets provided by my human geography colleagues. The data are stored in a zipfile and downloadable using the following link from my github repository:
 
 (Jon to add in the link)
@@ -48,7 +48,7 @@ To open R click on the start menu and open RStudio. You should see a screen rese
 - The **environment windows** - or if you like R's brain. This window shows the objects held in memory by the system (e.g. datafiles, vectors and so on), as well a history of things you've done, the connections you have open and lastly some tutorial resources.
 - The **output/input** window. This shows many things but the most important are the packages you have in the system, the files you are viewing (i.e. where you working directory is), the plots/graphics you might create and help options.
 
-![Figure 2: RStudio screen windows](/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Images/RStudio Screen Grab.png)
+![Figure 2: RStudio screen windows](//Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Images/RStudio Screen Grab.png)
 We are going to start by setting the ***working directory**. This is so R knows where to open and save files to. It is recommended that you set the working directory to an appropriate space in your computers work space. To start with, make it the directory where you have stored the unzipped data.
 
 To set the working directory, go to the **Session** option from the top bar of RStudio, click on **Set Working Directory** then **Choose Directory** and use the search window to click through to your directory and select **Open**. 
@@ -59,7 +59,7 @@ Where, **setwd()** is the **function call**, and
 **"/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods"** is the **path**.
 
 ```{r}
-setwd("/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods")
+setwd("/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods")
 ```
 
 If you want to know where your working directory currently is then use the **getwd()** function. R will return the disk address where it is looking.
@@ -131,7 +131,7 @@ Tutorname <- "Jon" # note the quotes. These tell R it is a string.
 
 When you run the code it takes the string **Jon** and adds it to an object called **Tutorname**. This object is then stored in the **Environment** window (top right) (Figure 3).
 
-![Figure 3](/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Images/Object_exampleRStudio.png)
+![Figure 3](/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Images/Object_exampleRStudio.png)
 
 If you just type "Jon" and run that code, it will repeat the name in console window (bottom left window).
 
@@ -240,13 +240,13 @@ I am resetting mine to the right place. I am doing it manually as show above. Th
 ```{r}
 # loads a csv, remember to correctly input the file location within your working directory or point to the directory where you data are stored.
 
-Ethnicity <- read_csv("/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Data/Birmingham Census 2021 MSOA/Bham_C2021_TS021Ethnic group.csv")
+Ethnicity <- read_csv("/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Data/Birmingham Census 2021 MSOA/Bham_C2021_TS021Ethnic group.csv")
 
-Rooms <- read_csv("/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Data/Birmingham Census 2021 MSOA/Bham_C2021_TS053Occupancy.csv")
+Rooms <- read_csv("/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Data/Birmingham Census 2021 MSOA/Bham_C2021_TS053Occupancy.csv")
 
-Qualifications <-read_csv("/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Data/Birmingham Census 2021 MSOA/Bham_C2021_TS067Qualifications.csv")
+Qualifications <-read_csv("/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Data/Birmingham Census 2021 MSOA/Bham_C2021_TS067Qualifications.csv")
 
-Employment <-read_csv("/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Data/Birmingham Census 2021 MSOA/Bham_C2021_TS066Economic.csv")
+Employment <-read_csv("/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Data/Birmingham Census 2021 MSOA/Bham_C2021_TS066Economic.csv")
 ```
 You will see a lot of messages as R creates a run of new column names for the columns in the spreadsheets which had the same name or column header, which was**%**. The **read_csv()** function did this for you. I have added a full more descriptive column name for the columns we need. 
 
@@ -277,7 +277,7 @@ tail(Qualifications) # will [have a guess what this returns!]
 #### Observing column names
 First, we need to find the columns we are interested in. These are shown in Table 1 below.
 
-![](/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Images/Table_for_columns.png)
+![](/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Images/Table_for_columns.png)
 **Table 1**: Key data columns
 
 To observe the column names for each dataset we can use the **names()** function. It is also possible to work out their order in the columns from observing the results of this function because each column is numbered sequentially in the dataframe. We will add the results to a vector that we can print later. We've made it easier by labelling the column you need with the names in the table.
@@ -403,7 +403,7 @@ It is important to be aware of this as R handles these different **classes** of 
 You can now save this file to your workspace folder. We will use these data in the next couple of practicals. To save the data we use the ***write.csv()** function. We do not need row numbers (the numbers on the left of the data - see in the View window) so we add **row.names=F**. We will save the data as practical_data.csv to our working directory. Remember R is case sensitive so take note of when object names are capitalised. **All we have done here is take the Census.Data dataframe and save it to a CSV file (called practical_data.csv) for use in the next workshop.**
 ```{r}
 # Writes the data to a csv named "practical_data" in your file directory
-write.csv(Census.Data, "/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Data/Birmingham Census 2021 MSOA/practical_data.csv", row.names=F)
+write.csv(Census.Data, "/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Data/Birmingham Census 2021 MSOA/practical_data.csv", row.names=F)
 ```
 ### What's next?
 Next week will we use the same data set to introduce you how to start to explore data and understand its patterns and dependencies. This is a crucial and important **first step** before you start to analyse data. You will be developing this skill consistently through the module.
@@ -421,13 +421,13 @@ I encourage you also to play with the code and exercises too!
 
 Here are the explanations of the census categories for data we have downloaded from the https://www.nomisweb.co.uk/ data portal.
 
-![UK census 2021 Ethnicity data ](/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Images/Ethnicity_explanation.png)
+![UK census 2021 Ethnicity data ](/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Images/Ethnicity_explanation.png)
 
-![UK census 2021 Household occupancy data](/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Images/Occupancy_explanation.png)
+![UK census 2021 Household occupancy data](/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Images/Occupancy_explanation.png)
 
-![UK census 2021 Economic Activity data](/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Images/EconomicActitiy_explanation.png)
+![UK census 2021 Economic Activity data](/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Images/EconomicActitiy_explanation.png)
 
-![UK census 2021 Educational Level data](/Users/jonsadler/Library/CloudStorage/OneDrive-UniversityofBirmingham/Teaching-materials/COURSES/4TH_YR/LM 40222 Quantitative methods/Images/EducationLevel_explanation.png)
+![UK census 2021 Educational Level data](/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Images/EducationLevel_explanation.png)
 
 ----
 Jon Sadler Oct 2024
