--- a/Codefiles/LM40222_Week_3.Rmd
+++ b/Codefiles/LM40222_Week_3.Rmd
@@ -22,6 +22,10 @@ At the end of this workshop you will be able to use R to:
 setwd("/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/Codefiles") # this is mine so don't copy the path!
 ```
 
+```{r}
+setwd("add in your path - you do need these quote marks") 
+```
+
 ### Important background information on spatial data
 
 #### Coordinate reference systems
@@ -43,7 +47,7 @@ The R functions for managing these datasets are relatively straightforward but r
 
 ```{r}
 # List of required libraries
-required_libraries <- c("sf","terra", "spdep","mapsf")
+required_libraries <- c("sf","terra", "spdep","mapsf","maps","viridis","tmap")
 
 # Check for the libraries that are not already installed
 libraries_to_install <- required_libraries[!(required_libraries %in% installed.packages()[,"Package"])]
@@ -62,28 +66,30 @@ This first line of code asks to supply a vector of the libraries we need using t
 - **"terra"** - Read about it: https://rspatial.org/pkg/1-introduction.html. Used to manage spatial raster data.
 - **"spdep"** - https://cran.r-project.org/web/packages/spdep/index.html. Used for geospatial analyses such as nearest neighbour analyses. See Roger Bivand's book on the module resource list.
 - **"mapsf"** - https://riatelab.github.io/mapsf/articles/mapsf.html. The aim of mapsf is to obtain thematic maps with the visual quality of those built with a classical mapping or GIS software.
+- **maps** - 
+- **viridis** - 
+- **tmap** - 
 
-The **installed.packages()** function returns a matrix of installed packages and maps this against the libraries we need. The line checking for uninstalled packages uses the !(required_libraries %in% installed.packages()[,"Package"]) expression to identify packages not yet installed. **install.packages()** Installs missing packages with their dependencies.
-**lapply()*:** Loads each required library after ensuring they're installed. It is the equivalent of repeatedly typing library(thePackageName) many times.
+The **installed.packages()** function returns a matrix of installed packages and maps this against the libraries we need. The line checking for uninstalled packages uses !(required_libraries %in% installed.packages()[,"Package"]) expression to identify packages not yet installed. **install.packages()** installs missing packages and **dependencies=TRUE** makes sure all the correct dependencies are installed.
+**lapply()*:** Loads each required library name from a list (i.e. **lapply()** after checking whether they're installed. It is the equivalent of repeatedly typing library(thePackageName) many times.
 
 **NOTE** that we are installing more than we need but we will use these are we work through the module.
 
-We are going to start our mapping journey using **ggplot2** because if can handle spatial data and we are familar with the syntax of the package.
+We are going to start our mapping journey using **ggplot2** because if can handle spatial data and we are familiar with the syntax of the package.
 
 
 ADD IN THE MAPPING STUFF - NEED TO FIND A GGPLOT2 MAPPING TUTORIAL TO WORK WITH...
 
-
+Then go one to use tmap....
 
 Now we'll turn our attention to the census data we created in workshop one and carried out some EDA on in workshop two. So we need to locate it and load it:
 
 #### Load data file
 ```{r}
-bham_data <- read_csv(">>>>>") # link this to the directly where your data are sat
+bham_data <- read_csv("add in your directory path") # link this to the directly where your data are sat
 ```
 
 We also need to download a shapefile for the LSOAs for the city. The should be located in your data directory in a subdirectory called shapefiles.
 ```{r}
 # link to shapefiles and load....
 ```
-
