--- a/Codefiles/LM40222_Week_3.Rmd
+++ b/Codefiles/LM40222_Week_3.Rmd
@@ -26,7 +26,9 @@ setwd("/Users/jonsadler/Documents/GitHub/Teaching/LM_40222_Quantitative_Methods/
 setwd("add in your path - you do need these quote marks") 
 ```
 
-### Important background information on spatial data
+### Introduction to spatial data
+Dealing with spatial in R, or any Geographical Information System (GIS) for that matter, requires that you understand how spatial data are created and also represented or projected. We will start by introducing you to the raster/vector data models. The vector data model represents the geographical data using polygons (e.g. outlines of Birmingham's LOAs), lines (e.g. Rail and road networks), points (e.g. occurrences of crimes, road traffic accidents). These have discrete, well-defined borders, meaning that vector datasets usually have a high level of precision The are not neccessarily accurate. The raster data model divides the surface up into cells of constant size but at varying spatial scales (generally presented as metres, kilometers of decimal degrees). Raster datasets are an important source of geographic data and frequently derived from aerial photography and satellite-based remote sensing products offering data on, for example, land surface temperatures, atmospheric pollutants, vegetation height, etc. 
+
 
 #### Coordinate reference systems
 
@@ -47,7 +49,7 @@ The R functions for managing these datasets are relatively straightforward but r
 
 ```{r}
 # List of required libraries
-required_libraries <- c("sf","terra", "spdep","mapsf","maps","viridis","tmap")
+required_libraries <- c("sf","terra", "spdep","mapsf","maps","viridis","tmap","spData","spDataLarge")
 
 # Check for the libraries that are not already installed
 libraries_to_install <- required_libraries[!(required_libraries %in% installed.packages()[,"Package"])]
@@ -66,9 +68,11 @@ This first line of code asks to supply a vector of the libraries we need using t
 - **"terra"** - Read about it: https://rspatial.org/pkg/1-introduction.html. Used to manage spatial raster data.
 - **"spdep"** - https://cran.r-project.org/web/packages/spdep/index.html. Used for geospatial analyses such as nearest neighbour analyses. See Roger Bivand's book on the module resource list.
 - **"mapsf"** - https://riatelab.github.io/mapsf/articles/mapsf.html. The aim of mapsf is to obtain thematic maps with the visual quality of those built with a classical mapping or GIS software.
-- **maps** - 
-- **viridis** - 
-- **tmap** - 
+- **maps** - https://cran.r-project.org/web/packages/maps/index.html.
+- **viridis** - https://cran.r-project.org/web/packages/viridis/vignettes/intro-to-viridis.html.
+- **tmap** - https://cran.r-project.org/web/packages/tmap/vignettes/tmap-getstarted.html.
+- **spData** - hold geographic data - https://nowosad.r-universe.dev/spData.
+- **spDataLarge** - load larger geographic data - https://nowosad.r-universe.dev/spDataLarge/spDataLarge.pdf.
 
 The **installed.packages()** function returns a matrix of installed packages and maps this against the libraries we need. The line checking for uninstalled packages uses !(required_libraries %in% installed.packages()[,"Package"]) expression to identify packages not yet installed. **install.packages()** installs missing packages and **dependencies=TRUE** makes sure all the correct dependencies are installed.
 **lapply()*:** Loads each required library name from a list (i.e. **lapply()** after checking whether they're installed. It is the equivalent of repeatedly typing library(thePackageName) many times.
